--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -14,4 +14,5 @@ table.table.table-hover
       th = Task.human_attribute_name(:description)
       td = simple_format(h(@task.description), {}, sanitize: false, wrapper_tag: "div")
 
-= link_to '編集', edit_task_path, class: 'btn btn-primary mr-3'
+= link_to '編集', edit_task_path, class: 'alert alert-primarys'
+= link_to '削除', @task, method: :delete, data: { confirm: "タスク「#{@task.name}」を削除します。よろしいですか？" }, class: 'alert alert-danger'
