--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -12,7 +12,7 @@ table.table.table-hover
       td = @task.name
     tr
       th = Task.human_attribute_name(:description)
-      td = simple_format(h(@task.description), {}, sanitize: false, wrapper_tag: "div")
+      td = auto_link(simple_format(h(@task.description), {}, sanitize: false, wrapper_tag: "div"))
 
 = link_to '編集', edit_task_path, class: 'alert alert-primarys'
 = link_to '削除', @task, method: :delete, data: { confirm: "タスク「#{@task.name}」を削除します。よろしいですか？" }, class: 'alert alert-danger'
