--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -13,6 +13,10 @@ table.table.table-hover
     tr
       th = Task.human_attribute_name(:description)
       td = auto_link(simple_format(h(@task.description), {}, sanitize: false, wrapper_tag: "div"))
+    tr
+      th = Task.human_attribute_name(:image)
+      td = image_tag @task.image if @task.image.attached?
+    tr
 
 = link_to '編集', edit_task_path, class: 'alert alert-primarys'
 = link_to '削除', @task, method: :delete, data: { confirm: "タスク「#{@task.name}」を削除します。よろしいですか？" }, class: 'alert alert-danger'
