--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -11,10 +11,14 @@ h1 タスク一覧
 = link_to '新規登録', new_task_path, class: 'btn btn-primary'
 
 .mb-3
+  = paginate @tasks
+  = page_entries_info @tasks
+
+.mb-3
 table.table.table-hover
   thead.thead-dark
     tr
-      th= Task.human_attribute_name(:name)
+      th= sort_link(@q, :name)
       th= Task.human_attribute_name(:created_at)
       th
       th
@@ -25,3 +29,4 @@ table.table.table-hover
           td = task.created_at
           td = link_to '編集', edit_task_path(task), class: 'alert alert-primary'
           td = link_to '削除', task, method: :delete, data: { confirm: "タスク「#{task.name}」を削除します。よろしいですか？" }, class: 'alert alert-danger'
+= link_to 'エクスポート', tasks_path(format: :csv), class: 'btn btn-primary mb-3'
